# ten_framework

./: .clang-format  .clang-tidy  .clangd  .cursorignore  .gitignore  .gitmodules  .tgnconfig.json  BUILD.gn  CLA.md  README.md  eslint.config.mjs  package-lock.json  package.json
core/src/ten_manager/: BUILD.gn  Cargo.toml
core/src/ten_manager/.cargo/: config.toml
core/src/ten_manager/designer_frontend/: .env  .prettierrc.json  LICENSE  README.md  bun.lockb  eslint.config.js  eslint.config.mjs  index.html  install-hooks.sh  package-lock.json  package.json  playwright.config.ts  postcss.config.js  tailwind.config.js  tsconfig.app.json  tsconfig.json  tsconfig.node.json  vite.config.ts  webpack.config.js
core/src/ten_manager/frontend/: package.json  webpack.config.js
core/src/ten_manager/src/: build.rs  cmd_line.rs  config.rs  constants.rs  error.rs  file_type.rs  fs.rs  http.rs  json.rs  lib.rs  locale.rs  log.rs  main.rs  output.rs  runner.rs  utils.rs  version.rs  version.rs.jinja2  version_utils.rs
core/src/ten_manager/tests/: cmd_builtin_function_install.rs  cmd_builtin_function_install_all.rs  cmd_builtin_function_ws.rs  cmd_check_graph.rs  cmd_designer.rs  cmd_dev_server.rs  integration_test.rs
core/src/ten_manager/tools/: build_all.sh  build_all_and_run.sh  cargo_sort.py  lldb_rust_pre_run_commands.py  test_runner.py
core/src/ten_runtime/: BUILD.gn  BUILD_release.gn  manifest.json  output_libs.gni
core/src/ten_runtime/addon/: BUILD.gn  addon.c  addon_autoload.c  addon_host.c  addon_manager.c
core/src/ten_runtime/addon_loader/: BUILD.gn  addon_loader.c
core/src/ten_runtime/app/: BUILD.gn  app.c  base_dir.c  close.c  endpoint.c  engine_interface.c  graph.c  internal.c  metadata.c  metric.c  migration.c  on_xxx.c  predefined_graph.c  telemetry.c
core/src/ten_runtime/binding/: BUILD.gn  common.c
core/src/ten_runtime/build_template/: preserved_metadata.c  preserved_metadata.c.jinja2
core/src/ten_runtime/common/: BUILD.gn  base_dir.c  binding.c  closeable.c  home.c  loc.c
core/src/ten_runtime/connection/: BUILD.gn  connection.c  migration.c
core/src/ten_runtime/engine/: BUILD.gn  engine.c  on_xxx.c
core/src/ten_runtime/extension/: BUILD.gn  base_dir.c  extension.c  extension_hdr.c  msg_handling.c  msg_not_connected_cnt.c  ten_extension_addon_and_instance_name_pair.c
core/src/ten_runtime/extension_context/: BUILD.gn  extension_context.c
core/src/ten_runtime/extension_group/: BUILD.gn  base_dir.c  extension_group.c
core/src/ten_runtime/extension_store/: BUILD.gn  extension_store.c
core/src/ten_runtime/extension_thread/: BUILD.gn  extension_thread.c  metric.c  on_xxx.c  telemetry.c
core/src/ten_runtime/global/: BUILD.gn  global.c  global.h  log.c  on_load.c  signal.c
core/src/ten_runtime/metadata/: BUILD.gn  manifest.c  metadata.c  metadata_info.c
core/src/ten_runtime/msg/: BUILD.gn  inline_assets.c  locked_res.c  loop_fields.c  msg.c  msg_create.c
core/src/ten_runtime/msg_conversion/: BUILD.gn  msg_and_its_result_conversion.c  msg_and_result_conversion.c  msg_conversion_context.c
core/src/ten_runtime/path/: BUILD.gn  path.c  path_group.c  path_in.c  path_out.c  path_table.c  result_return_policy.c
core/src/ten_runtime/protocol/: BUILD.gn  close.c  context.c  context_store.c  protocol.c
core/src/ten_runtime/remote/: BUILD.gn  remote.c
core/src/ten_runtime/schema_store/: BUILD.gn  cmd.c  interface.c  interface_info.c  msg.c  property.c  store.c
core/src/ten_runtime/ten_env/: BUILD.gn  inline_assets.c  ten.c  ten_env.c  ten_proxy.c
core/src/ten_runtime/ten_env_proxy/: BUILD.gn  ten_env_proxy.c
core/src/ten_runtime/test/: BUILD.gn  env_tester.c  env_tester_proxy.c  extension_test.c  extension_tester.c  test_app.c  test_extension.c  test_extension_group.c  tester_app.c  tester_extension.c
core/src/ten_runtime/timer/: BUILD.gn  timer.c
core/src/ten_rust/: BUILD.gn  Cargo.toml  cbindgen.toml
core/src/ten_rust/src/: _0_8_compatible.rs  bindings.rs  build.rs  constants.rs  env.rs  fs.rs  lib.rs
core/src/ten_rust/tests/: crypto_test.rs  graph_check.rs  integration_test.rs  interface.rs
core/src/ten_rust/tools/: test_runner.py
core/src/ten_utils/: BUILD.gn  output_libs.gni
core/src/ten_utils/backtrace/: BUILD.gn  buffer.c  common.c  common.h  file.c  mmap.c  sort.c  vector.c
core/src/ten_utils/container/: BUILD.gn  hash_bucket.c  hash_handle.c  hash_table.c  list.c  list_int32.c  list_node.c  list_node_int32.c  list_node_ptr.c  list_node_smart_ptr.c  list_node_str.c  list_ptr.c  (+3 more)
tests/: BUILD.gn
tests/common/: BUILD.gn  constant.h
tests/common/client/: BUILD.gn  curl_connect.c  curl_connect.h  http.c  http.h  msgpack_tcp.c  msgpack_tcp.h  tcp.c  tcp.h
tests/common/server/: BUILD.gn
tests/local_registry/: BUILD.gn
tests/local_registry/extension/: BUILD.gn
tests/local_registry/system/: BUILD.gn
tests/ten_manager/: BUILD.gn
tests/ten_manager/dependency_resolve/: BUILD.gn  test_case.py
tests/ten_manager/error_context/: BUILD.gn
tests/ten_manager/fetch/: BUILD.gn
tests/ten_manager/install/: BUILD.gn
tests/ten_manager/install_all/: BUILD.gn
tests/ten_manager/publish/: BUILD.gn  test_case.py
tests/ten_manager/standalone/: BUILD.gn
tests/ten_runtime/: BUILD.gn
tests/ten_runtime/integration/: BUILD.gn  pytest.ini
tests/ten_runtime/smoke/: BUILD.gn  fake_manifest.json  gtest_main.cc
tests/ten_runtime/unit/: BUILD.gn  ten_error_test.cc  ten_msg_test.cc  ten_schema_test.cc
tests/ten_utils/: BUILD.gn
tests/ten_utils/common/: BUILD.gn  test_utils.cpp  test_utils.h
tests/ten_utils/unit/: BUILD.gn  backtrace_sort_test.cc  sm_test.cc  ten_base64_test.cc  ten_file_test.cc  ten_file_test_posix.cc  ten_json_test.cc  ten_list_test.cc  ten_lock_test.cc  ten_log_test.cc  ten_macro_test.cc  ten_mmap_test.cc  ten_path_test.cc  ten_random_test.cc  ten_rwlock_test.cc  ten_schema_test.cc  ten_sharedptr_test.cc  ten_shm_test.cc  ten_string_test.cc  ten_thread_test.cc  ten_value_test.cc
tests/utils/: build_config.py  build_pkg.py  fs_utils.py  http.py  install_all.py  install_pkg.py  log.py  msgpack.py
(+3906 files in other folders)
