#
# Copyright © 2025 Agora
# This file is part of TEN Framework, an open source project.
# Licensed under the Apache License, Version 2.0, with certain conditions.
# Refer to the "LICENSE" file in the root directory for more information.
#
import("//build/ten_manager/options.gni")
import("//build/ten_runtime/options.gni")
import("//build/ten_utils/options.gni")
import("//third_party/yyjson/output_libs.gni")

# Because there is no 'rpath' mechanism in Windows, we need to copy all the
# dependend libraries of 'unit' and 'smoke' to one folder, and setup 'PATH'
# before executing 'unit' and 'smoke' testing.
copy("copy_yyjson_library_for_test") {
  sources = yyjson_output_libs
  deps = [ "//third_party/yyjson" ]
  outputs = [ "${root_out_dir}/tests/standalone/{{source_file_part}}" ]
}

group("tests") {
  deps = [
    "ten_runtime",
    "ten_utils",
    "//tests/ten_runtime",
  ]

  if (ten_enable_ten_manager) {
    deps += [ "local_registry" ]

    if (ten_manager_enable_tests) {
      deps += [
        "ten_manager",
        "//core/src/ten_manager:tman_test",
      ]
    }
  }
}
