[[bin]]
name = "tman"
path = "src/main.rs"

[package]
name = "ten_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = "0.13"
actix-cors = "0.7"
actix-files = "0.6"
actix-rt = "2.10"
actix-web = "4.8"
anyhow = "1.0"
clap = "4.5"
clingo = "0.8"
console = "0.15"
dirs = "5.0"
futures-util = "0.3"
globset = "0.4"
handlebars = "6.2"
ignore = "0.4"
indicatif = "0.17"
inquire = "0.7.5"
mime_guess = "2.0.5"
regex = "1.11"
remove_dir_all = "1.0"
rust-embed = "8.5.0"
serde_json = "1.0"
sha2 = "0.10"
tempfile = "3.10"
url = "2.5"
walkdir = "2.5"

[dependencies.linked-hash-map]
version = "0.5"
features = ["serde_impl"]

[dependencies.reqwest]
version = "0.12"
features = ["json", "blocking", "rustls-tls"]
default-features = false

[dependencies.semver]
version = "1.0"
features = ["serde"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.ten_rust]
path = "../ten_rust"
version = "0.1.0"

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.zip]
version = "2.2"
default-features = false
features = ["aes-crypto", "deflate", "deflate64", "lzma", "time", "zstd"]

[target."cfg(unix)".dependencies]
mimalloc = "0.1"

[target."cfg(unix)".dependencies.clingo]
version = "0.8"
features = ["static-linking"]
