[[bin]]
name = "tman"
path = "src/main.rs"

[package]
name = "ten_manager"
version = "0.1.0"
edition = "2021"

[dependencies]
actix = { version = "0.13.5" }
actix-cors = { version = "0.7", default-features = false }
actix-files = { version = "0.6", default-features = false }
actix-rt = { version = "2.10", default-features = false, features = ["macros"] }
actix-web = { version = "4.8", default-features = false, features = ["macros"] }
actix-web-actors = { version = "4.3.1", default-features = false }
anyhow = { version = "1.0" }
clap = { version = "4.5" }
clingo = { version = "0.8" }
console = { version = "0.15" }
dirs = { version = "5.0" }
futures-util = { version = "0.3" }
globset = { version = "0.4" }
handlebars = { version = "6.2" }
ignore = { version = "0.4" }
indicatif = { version = "0.17" }
inquire = { version = "0.7.5" }
jaq-core = "2.0.0"
jaq-json = { version = "1.0.0", features = ["serde_json"] }
jaq-std = "2.0.0"
linked-hash-map = { version = "0.5", features = ["serde_impl"] }
mime_guess = { version = "2.0.5" }
portable-pty = { version = "0.8.1" }
regex = { version = "1.11" }
remove_dir_all = { version = "1.0" }
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "blocking",
  "rustls-tls",
] }
rust-embed = { version = "8.5.0" }
semver = { version = "1.0", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }
tempfile = { version = "3.10" }
ten_rust = { path = "../ten_rust", version = "0.1.0" }
tokio = { version = "1", features = ["rt-multi-thread", "sync", "time"] }
url = { version = "2.5" }
walkdir = { version = "2.5" }
webbrowser = { version = "1.0", default-features = false }
zip = { version = "2.2", default-features = false, features = [
  "deflate",
  "time",
] }

[target."cfg(unix)".dependencies]
mimalloc = "0.1"

[target."cfg(unix)".dependencies.clingo]
version = "0.8"
features = ["static-linking"]
